tests/invalid/bug487.err_exp
bug487.m:033: When the condition succeeds, the if-then-else defines !:SS, but
bug487.m:033:   when the condition fails, it does not.
bug487.m:034: In clause for `do_reconstruct_route(in, out)':
bug487.m:034:   in argument 3 of call to predicate
bug487.m:034:   `bug487.construct_solution'/4:
bug487.m:034:   mode error: variable `STATE_VARIABLE_SS_8' has instantiatedness
bug487.m:034:   `free',
bug487.m:034:   expected instantiatedness was `mostly_unique'.
bug487.m:034: In clause for predicate `do_reconstruct_route'/2:
bug487.m:034:   warning: variable `STATE_VARIABLE_SS_8' occurs only once in
bug487.m:034:   this scope.
bug487.m:034: Warning: reference to uninitialized state variable !.SS.
